<resources>
    <string name="app_name">EDAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_retry_tutorial">Start Tutorial</string>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_examinee_profile">Profile</string>
    <string name="title_assessments">Assessments</string>
    <string name="title_assessment">Assessment</string>
    <string name="title_results">Results</string>
    <string name="title_examinees">Examinees</string>
    <string name="title_examinee_creator">Create an Examinee</string>
    <string name="title_login">Login</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="main_test_button">Take a test</string>
    <string name="main_previous_assessments_button">Previous assessments</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">156610595294599</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb156610595294599</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">AiwJ2uuwQx0LmOjJ2RKGaYgYb</string>
    <string name="twitter_consumer_secret" translatable="false">5xFVFZUxYurv3GcBXTvJ83vuEUWmbQ2zi9H7y7lyfBh8pWgODU</string>


    <!-- Result Activity -->

    <string name="resultNameDefault">Name</string>
    <string name="resultAgeLabel">Age:</string>
    <string name="resultDateLabel">Date taken:</string>
    <string name="resultAgeDefault">Age</string>
    <string name="resultDateDefault">Date</string>
    <string name="resultScoreLabel">Score:</string>
    <string name="resultScoreDefault">Score</string>
    <string name="resultExplanationDefault">The user can evaluate themself or conduct a child evaluation. This tool should not be used for diagnosing the condition, but can be used to gauge the necessity of further evaluation by a professional. There are 50 self-evaluation questions and 34 child evaluation questions, and the test generates a percentage of possibility. The questions are based on other questionnaires, but are not standard criteria used by any medical standards establishments.</string>
    <string name="resultNewTestButton">Take a new test</string>
    <string name="profilePreviousAsssessmentsLabel">Previous assessments taken:</string>
    <string name="examineeCreatorGenderLabel">Select gender:</string>
    <string name="examineeRowBoyAgeLabel">Age:</string>
    <string name="resultLearnMoreButtonText">Learn More</string>

    <string-array name="genderChoices">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>

</resources>
