<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result.ResultActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/resultNameText"
            android:layout_width="184dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp"
            android:text="@string/resultNameDefault"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resultNeutralFace"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/resultDateLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/resultDateLabel"
            app:layout_constraintStart_toStartOf="@+id/resultNameText"
            app:layout_constraintTop_toBottomOf="@+id/resultAgeLabelText" />

        <TextView
            android:id="@+id/resultAgeText"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="4dp"
            android:text="@string/resultAgeDefault"
            app:layout_constraintBaseline_toBaselineOf="@+id/resultAgeLabelText"
            app:layout_constraintStart_toEndOf="@+id/resultAgeLabelText" />

        <ImageView
            android:id="@+id/resultBoyFace"
            android:layout_width="112dp"
            android:layout_height="126dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="211dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boyface" />

        <ImageView
            android:id="@+id/resultGirlFace"
            android:layout_width="144dp"
            android:layout_height="109dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/girlface" />

        <ImageView
            android:id="@+id/resultNeutralFace"
            android:layout_width="148dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="205dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/neutralface" />

        <TextView
            android:id="@+id/resultAgeLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/resultAgeLabel"
            app:layout_constraintStart_toStartOf="@+id/resultNameText"
            app:layout_constraintTop_toBottomOf="@+id/resultNameText" />

        <TextView
            android:id="@+id/resultDateText"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:text="@string/resultDateDefault"
            app:layout_constraintBaseline_toBaselineOf="@+id/resultDateLabelText"
            app:layout_constraintStart_toEndOf="@+id/resultDateLabelText" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/resultScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/resultScoreDefault"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintStart_toEndOf="@+id/resultScoreLabelText"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/resultExplanationText"
        android:layout_width="319dp"
        android:layout_height="172dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/resultExplanationDefault"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultScoreText" />

    <TextView
        android:id="@+id/resultScoreLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:text="@string/resultScoreLabel"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/resultTakeNewTestButton"
        android:layout_width="143dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/pink_button_shape"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="16"
        android:text="@string/resultNewTestButton"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultLearnMoreButton"
        app:layout_constraintEnd_toStartOf="@+id/resultLearnMoreButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resultLearnMoreButton"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/pink_button_shape"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="8"
        android:text="@string/resultLearnMoreButtonText"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultExplanationText" />

</android.support.constraint.ConstraintLayout>